--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@
 apply plugin : 'application'
 sourceSets.main.java.srcDir 'src'
 sourceSets.test.java.srcDir 'test'
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
 mainClassName = 'exceptionquiz.ExceptionQuiz'
 defaultTasks('run')
 
