--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,20 @@
 //Run: gradle
 
-apply plugin : 'application'
+apply plugin: 'java'
 sourceSets.main.java.srcDir 'src'
 sourceSets.test.java.srcDir 'test'
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
-mainClassName = 'exceptionquiz.ExceptionQuiz'
-defaultTasks('run')
+defaultTasks('build')
 
-group = "ru.yaal.project"
+group = "exceptionquize"
 version = "2.0"
 jar.manifest.attributes "Main-Class": "exceptionquiz.ExceptionQuiz"
+
+task installLinux(dependsOn: jar, type: Copy) {
+    from jar.archivePath
+    into System.properties['user.home'] + '/exception_quiz'
+}
 
 dependencies {
     testCompile 'junit:junit:4.11'
