--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@
 //Run: sudo gradle installLinux
 
 import java.nio.file.Files
-import java.nio.file.Paths
 import java.nio.file.Path
+import java.nio.file.Paths
 
 apply plugin: 'java'
 sourceSets.main.java.srcDir 'src'
@@ -38,9 +38,7 @@ task installLinux(dependsOn: build, type: Copy) {
     doLast() {
         Path link = Paths.get('/usr/bin/exception_quiz');
         Path target = shInstall.toPath()
-        if (Files.exists(link)) {
-            Files.delete(link)
-        }
+        Files.deleteIfExists(link)
         Files.createSymbolicLink(link, target)
     }
 }
