Печатать версию приложения во время работы

--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ targetCompatibility = JavaVersion.VERSION_1_7
 defaultTasks('build')
 
 group = "exceptionquize"
-version = "2.2"
-jar.manifest.attributes "Main-Class": "exceptionquiz.ExceptionQuiz"
+version = 2.3
+jar.manifest.attributes('Main-Class': 'exceptionquiz.ExceptionQuiz', 'version' : version)
 
 final def installDir = '/opt/exception_quiz'
 final def shName = 'run.sh'
